--- a/index.html
+++ b/index.html
@@ -4,67 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/stile sito rodari.css">
-    <link rel="stylesheet" href="stile sito rodari.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="navigazione">
-        <nav><a href="">home</a></nav>
-        <nav><a href="">Menù</a></nav>
-    </header>
-    <main>
-        <section>
-            <div class="blocco-iniziale">
-                <div class="hero-image">
-                    <img src="immagine/illustrazione.jpg" alt="">
+        <header>
+            <div class="nav">
+                <div class="posizione">
+                        <li><a href="">Home</a></li>
                 </div>
-                <div class="hero-text">
-                    <h1>Il linguaggio narrativo di Gianni Rodari</h1>
-                    <div class="hero-rettangolo">
-                        <div style="width: 100%; height: 100%; background: #010100; border-radius: 50px">
+                <div class="posizione">
+                    <li><a href="">Menù</a></li>
+                </div>
+            </div>
+        </header>
+        <main>
+            <section class="copertina">
+                <div class="titolo">
+                    <h1>Il linguaggio narrativo di <br> gianni Rodari</h1>
+                </div>
+                <div class="siiilllda">
+                    <img src="immagine/illustrazione.jpg" alt="" srcset="">
+                </div>
+            </section>
+            <section class="card">
+                <div class="primo">
+                    <div class="sottotitolo">
+                        <h2>Il binomio fantastico di <br> Gianni Rodari</h2>
                     </div>
-                </div>          
-            </div>
-        </section>
-        <section class="card">
-            <div class="primo">
-                <div>
-                    <h2>Il binomio fantastico di Gianni Rodari</h2>
-                    <p>Il binomio fantastico è una tecnica di scrittura che prevede l’accostamento di due o più parole che non abbiano nulla in comune, ma legandole insieme possono dare vita a nuove storie.</p>
+                    <div class="testo">
+                        <p>Il binomio fantastico è una tecnica di scrittura che prevede l’accostamento di due o più parole che non abbiano nulla in comune, ma legandole insieme possono dare vita a nuove storie.</p>
+                    </div>
+                </div>
+                <div class="primo">
+                    <div class="sottotitolo">
+                        <h2>Il binomio fantastico <br> nel Cinema</h2>
+                    </div>
+                    <div class="testo">
+                        <p>Negli anni sono stati fatti vari tentativi cinematografici, tratti dagli scritti dello scrittore: “La torta in cielo”, “La freccia azzurra” e “Passeggiata di un distratto”. </p>
+                    </div>
+                </div>
+                <div class="primo">
+                    <div class="sottotitolo">
+                        <h2>La fantasia contaminata <br> dalla realtà</h2>
+                    </div>
+                    <div class="testo">
+                        <p>Negli adattamenti il linguaggio di Rodari viene semplificato, e le azioni vengono giustificate dalla realtà.</p>
+                    </div>
+                </div>
+            </section>
+            <section class="ai">
+                <div class="grigio">
+                    <h3>sarà l’intelligenza artificiale a tener fede ai testi di gianni rodari?</h5>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <div class="fine">
+                <div class="cop">
+                    <li><a href="">copyright</a></li>
+                </div>
+                <div class="conpri">
+                    <li><a href="">contatti</a></li>
+                    <li><a href="">privacy</a></li>
                 </div>
             </div>
-            <div class="secondo">
-                <div>
-                    <h3>il binomio fantastico nel cinema</h3>
-                    <p>Negli anni sono stati fatti vari tentativi cinematografici, tratti dagli scritti dello scrittore: “La torta in cielo”, “La freccia azzurra” e “Passeggiata di un distratto”. </p>
-                </div>
-            </div>
-            <div class="terzo">
-                <div>
-                    <h3>la fantasia contaminata dalla realtà</h3>
-                    <p>Negli adattamenti il linguaggio di Rodari viene semplificato, e le azioni vengono giustificate dalla realtà.</p>
-                </div>
-            </div>
-        </section>
-        <section class="ai">
-            <div class="grigio">
-                <h5>sarà l’intelligenza artificiale a tener fede ai testi di gianni rodari?</h5>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <nav>
-            <a href="">Copyright</a>
-        </nav>
-        <nav class="footer-destra">
-            <ul>
-                <li><a href="">Contatti</a></li>
-                <li><a href="">Privacy</a></li>
-            </ul>
-        </nav>
-    </footer>
+        </footer>
 </body>
 </html>
